HACK around bug 288791 - search for likely panel proxies and raise them after destroying an effect input window

BUG: 288791
REVIEW: 105245
FIXED-IN: 4.9